{
  "version": 4,
  "terraform_version": "1.5.2",
  "serial": 133,
  "lineage": "0243e8bd-c4da-c696-6547-73e5894bffee",
  "resources": [
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/disks/datahub-pvt-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pvt-0",
            "instance_id": "4010458787008973708",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "UFxTKFzOWrI=",
            "name": "datahub-pvt-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.148.52.21",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/private-subnet",
                "subnetwork_project": "nifty-vault-372307"
              }
            ],
            "project": "nifty-vault-372307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pvt-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.private_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/disks/datahub-pvt-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pvt-1",
            "instance_id": "8525612095449041804",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "UFxTKFzOWrI=",
            "name": "datahub-pvt-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.73.136.124",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/private-subnet",
                "subnetwork_project": "nifty-vault-372307"
              }
            ],
            "project": "nifty-vault-372307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pvt-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vm",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/disks/datahub-pub-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pub-0",
            "instance_id": "2367676556983372687",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "UFxTKFzOWrI=",
            "name": "datahub-pub-0",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.138.210.77",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
                "network_ip": "10.0.2.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/public-subnet",
                "subnetwork_project": "nifty-vault-372307"
              }
            ],
            "project": "nifty-vault-372307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pub-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2004-focal-arm64-v20230628",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/disks/datahub-pub-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pub-1",
            "instance_id": "3427765478813305776",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "UFxTKFzOWrI=",
            "name": "datahub-pub-1",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.139.218.75",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
                "network_ip": "10.0.2.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/public-subnet",
                "subnetwork_project": "nifty-vault-372307"
              }
            ],
            "project": "nifty-vault-372307",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/zones/us-east1-b/instances/datahub-pub-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "dev",
              "web"
            ],
            "tags_fingerprint": "XaeQnaHMn9Y=",
            "zone": "us-east1-b"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_firewall0",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T22:08:33.124-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nifty-vault-372307/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "nifty-vault-372307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh_firewall1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-07-11T22:08:33.241-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/nifty-vault-372307/global/firewalls/allow-ssh1",
            "log_config": [],
            "name": "allow-ssh1",
            "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
            "priority": 1000,
            "project": "nifty-vault-372307",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/firewalls/allow-ssh1",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "net",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nifty-vault-372307/global/networks/my-network",
            "mtu": 0,
            "name": "my-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "nifty-vault-372307",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-network"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/nifty-vault-372307/global/networks/my-vpc-network",
            "mtu": 0,
            "name": "my-vpc-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "nifty-vault-372307",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network"
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "bgp": [
              {
                "advertise_mode": "DEFAULT",
                "asn": 64514,
                "keepalive_interval": 20
              }
            ],
            "creation_timestamp": "2023-07-11T22:09:15.835-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/nifty-vault-372307/regions/us-east1/routers/my-router",
            "name": "my-router",
            "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-network",
            "project": "nifty-vault-372307",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/routers/my-router"
          },
          "dependencies": [
            "module.vpc.google_compute_network.net",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "nifty-vault-372307/us-east1/my-router/my-router-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "my-router-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "nifty-vault-372307",
            "region": "us-east1",
            "router": "my-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc.google_compute_network.net",
            "module.vpc.google_compute_network.vpc_network",
            "module.vpc.google_compute_router.router",
            "module.vpc.google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T22:08:34.426-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/nifty-vault-372307/regions/us-east1/subnetworks/private-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nifty-vault-372307",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-07-11T22:08:33.321-07:00",
            "gateway_address": "10.0.2.1",
            "id": "projects/nifty-vault-372307/regions/us-east1/subnetworks/public-subnet",
            "ip_cidr_range": "10.0.2.0/24",
            "name": "public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/global/networks/my-vpc-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "nifty-vault-372307",
            "purpose": "PRIVATE",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/nifty-vault-372307/regions/us-east1/subnetworks/public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.vpc.google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}